# recipes-convertor

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  LICENSE  README.md  mise.toml  package.json  pyproject.toml
recipes_convertor/: __main__.py  app.py  config.py  gemini.py  logger.py
scripts/lib/: command.py  project.py
scripts/lib/audit/: __init__.py
scripts/lib/audit/auditors/: flake8.py  markdownlint.py  mypy.py  pylint.py
scripts/lib/audit/format/: __init__.py
scripts/lib/audit/format/formatters/: black.py
scripts/tasks/: audit.py  format.py
